--- a/lib/template/dashboard.html
+++ b/lib/template/dashboard.html
@@ -5,50 +5,39 @@
     <title>Ipython Dashboard</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../static/js/jquery-2.1.4.min.js"></script>
-    <script src="../static/js/jquery.gridster.min.js"></script>
-    <link rel="stylesheet" href="../static/css/jquery.gridster.min.css">
+    <script src="../static/js/jquery-2.1.4.js"></script>
+    <script src="../static/js/jquery.gridster.js"></script>
+    <link rel="stylesheet" href="../static/css/jquery.gridster.css">
     <link rel="stylesheet" href="../static/css/test.css">
 </head>
 
 <body>
 
-  <h1>Resize</h1>
-
-  <p>Grab the right or bottom border and drag to the desired width or height.</p>
-
-  <div class="gridster">
+<div>
+  <div class="gridster parent-box">
     <ul>
-      <li data-row="1" data-col="1" data-sizex="2" data-sizey="2">0
+      <li data-row="1" data-col="1" data-sizex="2" data-sizey="2">1
       </li>
-      <li data-row="1" data-col="3" data-sizex="1" data-sizey="2">1
-        <iframe frameborder='1' src='example.html'></iframe>
+      <li data-row="1" data-col="3" data-sizex="1" data-sizey="2">2
       </li>
-      <li data-row="1" data-col="4" data-sizex="1" data-sizey="1">2</li>
-      <li data-row="3" data-col="2" data-sizex="3" data-sizey="1">3</li>
-      <li data-row="4" data-col="1" data-sizex="1" data-sizey="1">4</li>
-      <li data-row="3" data-col="1" data-sizex="1" data-sizey="1">5</li>
-      <li data-row="4" data-col="2" data-sizex="1" data-sizey="1">6</li>
-      <li data-row="5" data-col="2" data-sizex="1" data-sizey="1">7</li>
-      <li data-row="4" data-col="4" data-sizex="1" data-sizey="1">8</li>
-      <li data-row="1" data-col="5" data-sizex="1" data-sizey="3">9</li>
+      <li data-row="1" data-col="4" data-sizex="1" data-sizey="1">3</li>
+      <li data-row="3" data-col="2" data-sizex="3" data-sizey="1">4</li>
     </ul>
   </div>
+</div>
 
     <script type="text/javascript">
       var gridster;
 
-      $(function(){
-
+      $(function(){   //DOM Ready
         gridster = $(".gridster ul").gridster({
-          widget_base_dimensions: [100, 100],
+          widget_base_dimensions: [300, 300],
           widget_margins: [5, 5],
           helper: 'clone',
           resize: {
             enabled: true
           }
         }).data('gridster');
-
       });
     </script>
 </body>
