--- a/lib/template/dashboard.html
+++ b/lib/template/dashboard.html
@@ -8,6 +8,7 @@
   <script src="../static/js/jquery-2.1.4.js"></script>
   <script src="../static/js/jquery.gridster.js"></script>
   <script src="../static/js/bootstrap.js"></script>
+  <script src="../static/js/test.js"></script>
 
   <link rel="stylesheet" href="../static/css/bootstrap.css">
   <link rel="stylesheet" href="../static/css/jquery.gridster.css">
@@ -51,7 +52,9 @@
 
       <div class="htmleaf-container">
         <header class="htmleaf-header">
-          <h1>Building and sharing IPython Dashboard<span>Based on Bootstrap &</span></h1>
+          <input id="dashboard_name" class="form-control input-lg input-title" 
+          style="background-color: inherit; text-align:center; font-size:xx-large; height:60px; border:none" 
+          value="Building and sharing IPython Dashboard">
           <div class="htmleaf-links">
 
           </div>
