--- a/lib/static/css/test.css
+++ b/lib/static/css/test.css
@@ -131,5 +131,6 @@ body {
     text-align: center; 
     font-size: xx-large; 
     height: 60px; 
-    border: none
+    border: none;
+    resize: none;
 }
