update readme for branch v 0.1

--- a/lib/template/dashboard.html
+++ b/lib/template/dashboard.html
@@ -42,6 +42,13 @@
             </a>
           </li>
           <li>
+          <li>
+            <a href>
+              <i class="fa fa-fw fa-lg fa-cog"></i> 
+              <span>SQL</span>
+            </a>
+          </li>
+          <li>
             <a href>
               <i class="fa fa-fw fa-lg fa-question-circle"></i> 
               <span>Help</span>
