--- a/lib/static/css/test.css
+++ b/lib/static/css/test.css
@@ -126,11 +126,42 @@ body {
   }
 }
 
-.input-title {
+.input-title-level-1 {
     background-color: inherit; 
     text-align: center; 
     font-size: xx-large; 
     height: 60px; 
     border: none;
     resize: none;
+}
+
+.input-title-level-2 {
+    background-color: inherit; 
+    text-align: center; 
+    font-size: x-large; 
+    height: 30px; 
+    border: none;
+    resize: none;
+    padding: 0px 0px;
+}
+
+.chart-wrapper {
+  background: #fff;
+  border: 1px solid #e2e2e2;
+  border-radius: 3px;
+  margin-bottom: 10px;
+  height: inherit;
+}
+
+.chart-title {
+  border-bottom: 1px solid #d7d7d7;
+  color: #666;
+  font-size: 14px;
+  font-weight: 200;
+  padding: 7px 10px 4px;
+  height: 45px;
+}
+
+.chart-graph {
+  height: 85%;
 }
