--- a/lib/template/dashboard.html
+++ b/lib/template/dashboard.html
@@ -42,52 +42,87 @@
             </a>
           </li>
           <li>
-          <li>
-            <a href>
-              <i class="fa fa-fw fa-lg fa-cog"></i> 
-              <span>SQL</span>
-            </a>
-          </li>
-          <li>
-            <a href>
-              <i class="fa fa-fw fa-lg fa-question-circle"></i> 
-              <span>Help</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
+            <li>
+              <a href>
+                <i class="fa fa-fw fa-lg fa-cog"></i> 
+                <span>SQL</span>
+              </a>
+            </li>
+            <li>
+              <a href>
+                <i class="fa fa-fw fa-lg fa-question-circle"></i> 
+                <span>Help</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
 
-      <div class="htmleaf-container">
-        <header class="htmleaf-header">
-          <textarea id="dashboard_name" class="form-control input-lg input-title" maxlength="64">Building and sharing IPython Dashboard</textarea>
-          <div class="htmleaf-links">
+        <div class="htmleaf-container">
+          <header class="htmleaf-header">
+            <textarea id="dashboard_name" class="form-control input-lg input-title-level-1" maxlength="64" placeholder="Building and sharing IPython Dashboard"></textarea>
+            <div class="htmleaf-links">
 
-          </div>
-        </header>
+            </div>
+          </header>
 
-        <div class="htmleaf-content bgcolor-8" style="padding-left: 10px; padding-right: 10px">
-        <div><button type="button" class="btn btn-primary" onclick="add_box()">Add Box</button></div>
+          <div class="htmleaf-content bgcolor-8" style="padding-left: 10px; padding-right: 10px">
+            <div>
+              <button type="button" class="btn btn-primary" onclick="add_box()"><i class="fa fa-fw fa-lg fa-plus"></i>Add</button>
+              <button type="button" class="btn btn-primary" onclick="edit_box()"><i class="fa fa-fw fa-lg fa-edit"></i>Edit</button>
+            </div>
             <div class="gridster parent-box">
               <ul id="a" style="margin-left: 10px; margin-right: 10px; padding-left: 0px;">
-                <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">1</li>
-                <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">2</li>
-                <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">3</li>
-                <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">4</li>
-                <!-- <li id="add_box" data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-                    <span class="fa fa-fw fa-3x fa-plus" style="padding-top: 100px;" onclick="add_box()"></span>
-                </li> -->
+                <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+                  <div class="chart-wrapper">
+                    <div class="chart-title bold">
+                      <input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph">
+                    </div>
+                    <div class="chart-graph">
+                      <iframe src="" style="width: 100%; height: 100%;"></iframe>
+                    </div>
+                  </div>
+                </li>
+                <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+                  <div class="chart-wrapper">
+                    <div class="chart-title bold">
+                      <input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph">
+                    </div>
+                    <div class="chart-graph">
+                      <iframe src="" style="width: 100%; height: 100%;"></iframe>
+                    </div>
+                  </div>
+                </li>
+                <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+                  <div class="chart-wrapper">
+                    <div class="chart-title bold">
+                      <input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph">
+                    </div>
+                    <div class="chart-graph">
+                      <iframe src="" style="width: 100%; height: 100%;"></iframe>
+                    </div>
+                  </div>
+                </li>
+                <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+                  <div class="chart-wrapper">
+                    <div class="chart-title bold">
+                      <input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph">
+                    </div>
+                    <div class="chart-graph">
+                      <iframe src="" style="width: 100%; height: 100%;"></iframe>
+                    </div>
+                  </div>
                 </li>
               </ul>
             </div>
+          </div>
+
         </div>
 
-      </div>
+      </div> 
+    </div>
 
-    </div> 
-</div>
-
-<script type="text/javascript">
-  var gridster;
+    <script type="text/javascript">
+      var gridster;
 
   $(function(){   //DOM Ready
     gridster = $(".gridster ul").gridster({
