template almost done, code cleaned up, will meger to master and develop server side

--- a/lib/static/css/dash.css
+++ b/lib/static/css/dash.css
@@ -138,7 +138,7 @@ body {
     resize: none;
     padding: 0px 0px;
     margin-bottom: 0px;
-    /*width: 90%;*/
+    padding-left: 10%;
 }
 
 .edit-button {
