--- a/lib/template/dashboard.html
+++ b/lib/template/dashboard.html
@@ -9,7 +9,7 @@
   <script src="../static/js/jquery-2.1.4.js"></script>
   <script src="../static/js/jquery.gridster.js"></script>
   <script src="../static/js/bootstrap.js"></script>
-  <script src="../static/js/test.js"></script>
+  <script src="../static/js/dash.js"></script>
 
   <link rel="stylesheet" href="../static/css/bootstrap.css">
   <link rel="stylesheet" href="../static/css/jquery.gridster.css">
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="../static/css/font-awesome.css">
   <link rel="stylesheet" href="../static/css/default.css">
   <link rel="stylesheet" href="../static/css/normalize.css">
-  <link rel="stylesheet" href="../static/css/test.css">
+  <link rel="stylesheet" href="../static/css/dash.css">
 
 </head>
 
@@ -69,7 +69,6 @@
         <div class="htmleaf-content bgcolor-8" style="padding-left: 10px; padding-right: 10px">
           <div>
             <button type="button" class="btn btn-primary" onclick="add_box()"><i class="fa fa-fw fa-lg fa-plus"></i>Add</button>
-            <!-- <button type="button" class="btn btn-primary" onclick="edit_box()"><i class="fa fa-fw fa-lg fa-edit"></i>Edit</button> -->
           </div>
 
           <div class="gridster parent-box">
@@ -78,8 +77,8 @@
                 <div class="chart-wrapper">
                   <div class="chart-title bold">
                     <table class="table input-title-level-2">
-                      <tr class="active">
-                          <td style="padding: 0px; width: 90%"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
+                      <tr class="active" style="padding-left: 10%;">
+                          <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
                           <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button"><i class="fa fa-fw fa-lg fa-edit" style="color: black;"></i></button></td>
                       </tr>
                     </table>    
@@ -93,8 +92,8 @@
                 <div class="chart-wrapper">
                   <div class="chart-title bold">
                     <table class="table input-title-level-2">
-                      <tr class="active">
-                          <td style="padding: 0px; width: 90%"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
+                      <tr class="active" style="padding-left: 10%;">
+                          <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
                           <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button"><i class="fa fa-fw fa-lg fa-edit" style="color: black;"></i></button></td>
                       </tr>
                     </table>  
@@ -108,8 +107,8 @@
                 <div class="chart-wrapper">
                   <div class="chart-title bold">
                     <table class="table input-title-level-2">
-                      <tr class="active">
-                          <td style="padding: 0px; width: 90%"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
+                      <tr class="active" style="padding-left: 10%;">
+                          <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
                           <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button"><i class="fa fa-fw fa-lg fa-edit" style="color: black;"></i></button></td>
                       </tr>
                     </table>  
@@ -119,12 +118,12 @@
                   </div>
                 </div>
               </li>
-              <li id="b" data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+              <li id="test" data-row="1" data-col="1" data-sizex="1" data-sizey="1">
                 <div class="chart-wrapper">
                   <div class="chart-title bold">
                     <table class="table input-title-level-2">
-                      <tr class="active">
-                          <td style="padding: 0px; width: 90%"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
+                      <tr class="active" style="padding-left: 10%;">
+                          <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
                           <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button"><i class="fa fa-fw fa-lg fa-edit" style="color: black;"></i></button></td>
                       </tr>
                     </table>  
