--- a/dashboard/template/dashboard.html
+++ b/dashboard/template/dashboard.html
@@ -26,7 +26,7 @@
   <div class="container container-box">
     <div class="main clearfix">
 
-    <!-- navigate side bar -->
+      <!-- navigate side bar -->
       <nav id="nav" class="navbar navbar-vertical-left" onmousemove="resize_content(1)" onmouseout="resize_content(2)">
         <ul class="nav navbar-nav" style="height: 250px;">
           <li><a href=""></a></li>
@@ -57,7 +57,7 @@
         </ul>
       </nav>
 
-    <!-- main content container -->
+      <!-- main content container -->
       <div id="main-content" class="htmleaf-container">
 
         <!-- dashboard name -->
@@ -69,19 +69,19 @@
         <div class="htmleaf-content bgcolor-8" style="padding-left: 0px; padding-right: 0px; padding: 0px">
           <div style="padding-bottom: 10px">
             <button type="button" class="btn btn-primary" onclick="add_box()"><i class="fa fa-fw fa-
-            lg fa-plus"></i>Add</button>
-            <button type="button" class="btn btn-success" onclick="add_box()"><i class="fa fa-fw fa-lg fa-share-alt"></i>Share</button>
-          </div>
+              lg fa-plus"></i>Add</button>
+              <button type="button" class="btn btn-success" onclick="add_box()"><i class="fa fa-fw fa-lg fa-share-alt"></i>Share</button>
+            </div>
 
-          <div id="box-container" class="gridster parent-box">
-            <ul id="box-ul" class="box-ul">
-              <li data-row="1" data-col="1" data-sizex="1" data-sizey="1" class="box-li">
+            <div id="box-container" class="gridster parent-box">
+              <ul id="box-ul" class="box-ul">
+                <li data-row="1" data-col="1" data-sizex="1" data-sizey="1" class="box-li">
                  <div class="chart-wrapper">
                   <div class="chart-title bold">
                     <table class="table input-title-level-2">
                       <tr class="active" style="padding-left: 10%;">
-                          <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
-                          <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button" data-toggle="modal" data-target="#myModal"><i class="fa fa-fw fa-lg fa-edit" style="color: black;"></i></button></td>
+                        <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
+                        <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button" data-toggle="modal" data-target="#myModal"><i class="fa fa-fw fa-lg fa-edit" style="color: black;"></i></button></td>
                       </tr>
                     </table>    
                   </div>
@@ -91,79 +91,98 @@
                 </div> 
               </li>
               <li data-row="1" data-col="1" data-sizex="1" data-sizey="1" class="box-li">
-                 <div class="chart-wrapper">
-                  <div class="chart-title bold">
-                    <table class="table input-title-level-2">
-                      <tr class="active" style="padding-left: 10%;">
-                          <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
-                          <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button"><i class="fa fa-fw fa-lg fa-edit" style="color: black;"></i></button></td>
-                      </tr>
-                    </table>  
-                  </div>
-                  <div class="chart-graph">
-                    <iframe src="" style="width: 100%; height: 100%; border: initial;"></iframe>
-                  </div>
-                </div> 
-              </li>
-              <li data-row="1" data-col="1" data-sizex="1" data-sizey="1" class="box-li">
-                <div class="chart-wrapper">
-                  <div class="chart-title bold">
-                    <table class="table input-title-level-2">
-                      <tr class="active" style="padding-left: 10%;">
-                          <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
-                          <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button"><i class="fa fa-fw fa-lg fa-edit" style="color: black;"></i></button></td>
-                      </tr>
-                    </table>  
-                  </div>
-                  <div class="chart-graph">
-                    <iframe src="" style="width: 100%; height: 100%; border: initial;"></iframe>
-                  </div>
+               <div class="chart-wrapper">
+                <div class="chart-title bold">
+                  <table class="table input-title-level-2">
+                    <tr class="active" style="padding-left: 10%;">
+                      <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
+                      <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button"><i class="fa fa-fw fa-lg fa-edit" style="color: black;"></i></button></td>
+                    </tr>
+                  </table>  
                 </div>
-              </li>
-              <li id="test" data-row="1" data-col="1" data-sizex="1" data-sizey="1" class="box-li">
-                <div class="chart-wrapper">
-                  <div class="chart-title bold">
-                    <table class="table input-title-level-2">
-                      <tr class="active" style="padding-left: 10%;">
-                          <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
-                          <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button"><i class="fa fa-fw fa-lg fa-edit" style="color: black;"></i></button></td>
-                      </tr>
-                    </table>  
-                  </div>
-                  <div class="chart-graph">
-                    <iframe src="" style="width: 100%; height: 100%; border: initial;"></iframe>
-                  </div>
+                <div class="chart-graph">
+                  <iframe src="" style="width: 100%; height: 100%; border: initial;"></iframe>
                 </div>
-              </li>
-            </ul>
-          </div>
+              </div> 
+            </li>
+            <li data-row="1" data-col="1" data-sizex="1" data-sizey="1" class="box-li">
+              <div class="chart-wrapper">
+                <div class="chart-title bold">
+                  <table class="table input-title-level-2">
+                    <tr class="active" style="padding-left: 10%;">
+                      <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
+                      <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button"><i class="fa fa-fw fa-lg fa-edit" style="color: black;"></i></button></td>
+                    </tr>
+                  </table>  
+                </div>
+                <div class="chart-graph">
+                  <iframe src="" style="width: 100%; height: 100%; border: initial;"></iframe>
+                </div>
+              </div>
+            </li>
+            <li id="test" data-row="1" data-col="1" data-sizex="1" data-sizey="1" class="box-li">
+              <div class="chart-wrapper">
+                <div class="chart-title bold">
+                  <table class="table input-title-level-2">
+                    <tr class="active" style="padding-left: 10%;">
+                      <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
+                      <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button"><i class="fa fa-fw fa-lg fa-edit" style="color: black;"></i></button></td>
+                    </tr>
+                  </table>  
+                </div>
+                <div class="chart-graph">
+                  <iframe src="" style="width: 100%; height: 100%; border: initial;"></iframe>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
   </div>
+</div>
 
 <!-- Editor Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" 
-   aria-labelledby="myModalLabel" aria-hidden="true">
-   <div class="modal-dialog">
-      <div class="modal-content">
-         <div class="modal-header">
-            <button type="button" class="close" 
-               data-dismiss="modal" aria-hidden="true">
-                  &times;
-            </button>
-            <h5 class="modal-title" id="myModalLabel">Edit your dash graph</h5>
-         </div>
-         <div class="modal-body">
-            在这里添加一些文本
-         </div>
-         <div class="modal-footer">
-            <button type="button" class="btn btn-default" 
-               data-dismiss="modal">cancel</button>
-            <button type="button" class="btn btn-primary">save</button>
-         </div>
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal -->
+aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal-dialog">
+  <div class="modal-content">
+   <div class="modal-header" style="padding: 5px;">
+    <button type="button" class="close" 
+    data-dismiss="modal" aria-hidden="true">
+    &times;
+  </button>
+  <h5 class="modal-title" id="myModalLabel">Edit your dash graph</h5>
+</div>
+<div class="modal-body">
+  <div>
+    <table class="table input-title-level-2">
+      <tr class="active">
+        <td style="padding: 0px; width: 20%; border: none">
+          <select id="keys" class="form-control">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+          </select>
+        </td>
+        <td style="padding: 0px; width: 70%; background-color: white;border: none;"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Define your graph" style="padding-left: 0px"></td>
+        <td style="padding: 0px; width: 10%; background-color: inherit; border: none;"><button class="btn btn-primary edit-button"><i class="fa fa-fw fa-lg fa-refresh" style="color: black;"></i></button></td>
+      </tr>
+    </table> 
+  </div>
+  <div style="width: 100%; height: 500px">
+
+  </div>
+</div>
+<div class="modal-footer" style="padding: 5px;">
+  <button type="button" class="btn btn-default btn-sm" 
+  data-dismiss="modal">cancel</button>
+  <button type="button" class="btn btn-primary btn-sm">save</button>
+</div>
+</div><!-- /.modal-content -->
+</div><!-- /.modal -->
 </div>
 
 
@@ -173,7 +192,7 @@
   // var gridster;
   // var box_width = Math.floor(document.getElementById("box-ul").offsetWidth / 2);
   // var box_height = Math.floor(box_width * 9 / 16);
- 
+
   $(function init_grid(){   //DOM Ready
     var gridster;
     var box_width = Math.floor(document.getElementById("box-ul").offsetWidth / 2)
@@ -189,6 +208,21 @@
         enabled: true
       }
     }).data('gridster');
+  });
+
+  $(function get_keys_v2(){
+    var keys_select = $("#keys");
+    keys_select.empty();
+
+    console.log("get_keys");
+    var url = "http://127.0.0.1:9090/keys";
+    $.getJSON(url, function(data){
+      $.each(data.data, function(index, value){
+        keys_select.append("<option>" + value + "</option>")
+        console.log(index);
+        console.log(value);
+      })
+    });
   });
 </script>
 
