--- a/dashboard/template/dashboard.html
+++ b/dashboard/template/dashboard.html
@@ -66,8 +66,8 @@
         </header>
 
         <!-- dashboard content -->
-        <div class="htmleaf-content bgcolor-8" style="padding-left: 0px; padding-right: 0px; padding: 0px">
-          <div style="padding-bottom: 10px">
+        <div class="htmleaf-content bgcolor-8" style="padding-left: 0px; padding-right: 0px; padding: 0px; background-color: white;">
+          <div style="padding-bottom: 0px">
             <button type="button" class="btn btn-primary" onclick="add_box()"><i class="fa fa-fw fa-
               lg fa-plus"></i>Add</button>
               <button type="button" class="btn btn-success" onclick="add_box()"><i class="fa fa-fw fa-lg fa-share-alt"></i>Share</button>
@@ -96,7 +96,7 @@
                   <table class="table input-title-level-2">
                     <tr class="active" style="padding-left: 10%;">
                       <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
-                      <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button"><i class="fa fa-fw fa-lg fa-edit" style="color: black;"></i></button></td>
+                      <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button" data-toggle="modal" data-target="#myModal"><i class="fa fa-fw fa-lg fa-edit" style="color: black;"></i></button></td>
                     </tr>
                   </table>  
                 </div>
@@ -111,7 +111,7 @@
                   <table class="table input-title-level-2">
                     <tr class="active" style="padding-left: 10%;">
                       <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
-                      <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button"><i class="fa fa-fw fa-lg fa-edit" style="color: black;"></i></button></td>
+                      <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button" data-toggle="modal" data-target="#myModal"><i class="fa fa-fw fa-lg fa-edit" style="color: black;"></i></button></td>
                     </tr>
                   </table>  
                 </div>
@@ -126,7 +126,7 @@
                   <table class="table input-title-level-2">
                     <tr class="active" style="padding-left: 10%;">
                       <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
-                      <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button"><i class="fa fa-fw fa-lg fa-edit" style="color: black;"></i></button></td>
+                      <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button" data-toggle="modal" data-target="#myModal"><i class="fa fa-fw fa-lg fa-edit" style="color: black;"></i></button></td>
                     </tr>
                   </table>  
                 </div>
@@ -145,12 +145,11 @@
 <!-- Editor Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" 
 aria-labelledby="myModalLabel" aria-hidden="true">
-<div class="modal-dialog">
+<div class="modal-dialog" style="width: 60%; height: 40%;">
   <div class="modal-content">
    <div class="modal-header" style="padding: 5px;">
-    <button type="button" class="close" 
-    data-dismiss="modal" aria-hidden="true">
-    &times;
+    <button type="button" class="close btn-sm" data-dismiss="modal" aria-hidden="true">
+    <i class="fa fa-fw fa-lg fa-close"></i>
   </button>
   <h5 class="modal-title" id="myModalLabel">Edit your dash graph</h5>
 </div>
@@ -159,7 +158,7 @@ aria-labelledby="myModalLabel" aria-hidden="true">
     <table class="table input-title-level-2">
       <tr class="active">
         <td style="padding: 0px; width: 20%; border: none">
-          <select id="keys" class="form-control">
+          <select id="keys" class="form-control" style="border: none">
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -172,6 +171,7 @@ aria-labelledby="myModalLabel" aria-hidden="true">
       </tr>
     </table> 
   </div>
+  <hr style="margin: 5px 0px; color: green;">
   <div style="width: 100%; height: 500px">
 
   </div>
