--- a/dashboard/template/dashboard.html
+++ b/dashboard/template/dashboard.html
@@ -172,7 +172,7 @@ aria-labelledby="myModalLabel" aria-hidden="true">
     </table> 
   </div>
   <hr style="margin: 5px 0px; color: green;">
-  <div style="width: 100%; height: 500px">
+  <div id="value" style="width: 100%; height: 500px">
 
   </div>
 </div>
@@ -183,6 +183,11 @@ aria-labelledby="myModalLabel" aria-hidden="true">
 </div>
 </div><!-- /.modal-content -->
 </div><!-- /.modal -->
+</div>
+
+
+<div>
+    <table class="table-condensed"><thead><tr><th></th><th>business_id</th><th>name</th><th>address</th><th>city</th><th>state</th><th>postal_code</th><th>latitude</th><th>longitude</th><th>phone_number</th></tr></thead></table>
 </div>
 
 
