--- a/dashboard/template/dashboard.html
+++ b/dashboard/template/dashboard.html
@@ -149,47 +149,41 @@ aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-content">
    <div class="modal-header" style="padding: 5px;">
     <button type="button" class="close btn-sm" data-dismiss="modal" aria-hidden="true">
-    <i class="fa fa-fw fa-lg fa-close"></i>
-  </button>
-  <h5 class="modal-title" id="myModalLabel">Edit your dash graph</h5>
-</div>
-<div class="modal-body">
-  <div>
-    <table class="table input-title-level-2">
-      <tr class="active">
-        <td style="padding: 0px; width: 20%; border: none">
-          <select id="keys" class="form-control" style="border: none">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-          </select>
-        </td>
-        <td style="padding: 0px; width: 70%; background-color: white;border: none;"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Define your graph" style="padding-left: 0px"></td>
-        <td style="padding: 0px; width: 10%; background-color: inherit; border: none;"><button class="btn btn-primary edit-button"><i class="fa fa-fw fa-lg fa-refresh" style="color: black;"></i></button></td>
-      </tr>
-    </table> 
+      <i class="fa fa-fw fa-lg fa-close"></i>
+    </button>
+    <h5 class="modal-title" id="myModalLabel">Edit your dash graph</h5>
   </div>
-  <hr style="margin: 5px 0px; color: green;">
-  <div id="value" style="width: 100%; height: 500px">
+  <div class="modal-body">
+    <div>
+      <table class="table input-title-level-2">
+        <tr class="active">
+          <td style="padding: 0px; width: 20%; border: none">
+            <select id="keys" class="form-control" style="border: none">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </td>
+          <td style="padding: 0px; width: 70%; background-color: white;border: none;"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Define your graph" style="padding-left: 0px"></td>
+          <td style="padding: 0px; width: 10%; background-color: inherit; border: none;"><button class="btn btn-primary edit-button"><i class="fa fa-fw fa-lg fa-refresh" style="color: black;"></i></button></td>
+        </tr>
+      </table> 
+    </div>
+    <hr style="margin: 5px 0px; color: green;">
+    <div id="value" style="width: 100%; height: 500px; overflow-x:auto; overflow-y:auto;">
 
+    </div>
   </div>
-</div>
-<div class="modal-footer" style="padding: 5px;">
-  <button type="button" class="btn btn-default btn-sm" 
-  data-dismiss="modal">cancel</button>
-  <button type="button" class="btn btn-primary btn-sm">save</button>
-</div>
+  <div class="modal-footer" style="padding: 5px;">
+    <button type="button" class="btn btn-default btn-sm" 
+    data-dismiss="modal">cancel</button>
+    <button type="button" class="btn btn-primary btn-sm">save</button>
+  </div>
 </div><!-- /.modal-content -->
 </div><!-- /.modal -->
 </div>
-
-
-<div>
-    <table class="table-condensed"><thead><tr><th></th><th>business_id</th><th>name</th><th>address</th><th>city</th><th>state</th><th>postal_code</th><th>latitude</th><th>longitude</th><th>phone_number</th></tr></thead></table>
-</div>
-
 
 <!-- Do some initializing work -->
 <!-- Initialize gridster -->
