rearrange folder structure add nvd3, using it for visualization add config for redis, using redis as our db as well as kv

--- a/dashboard/static/css/dash.css
+++ b/dashboard/static/css/dash.css
@@ -157,6 +157,10 @@ body {
     background-color: inherit;
 }
 
+.edit-button:focus {
+    background-color: inherit;
+}
+
 .chart-wrapper {
   background: #fff;
   border: 1px solid #e2e2e2;
