--- a/dashboard/template/dashboard.html
+++ b/dashboard/template/dashboard.html
@@ -10,6 +10,9 @@
   <script src="../static/js/jquery.gridster.js"></script>
   <script src="../static/js/bootstrap.js"></script>
   <script src="../static/js/dash.js"></script>
+  <script src="../static/js/d3.js"></script>
+  <script src="../static/js/nv.d3.js"></script>
+  <script src="../static/js/dash.vis.js"></script>
 
   <link rel="stylesheet" href="../static/css/bootstrap.css">
   <link rel="stylesheet" href="../static/css/jquery.gridster.css">
@@ -17,6 +20,7 @@
   <link rel="stylesheet" href="../static/css/font-awesome.css">
   <link rel="stylesheet" href="../static/css/default.css">
   <link rel="stylesheet" href="../static/css/normalize.css">
+  <link rel="stylesheet" href="../static/css/nv.d3.css">
   <link rel="stylesheet" href="../static/css/dash.css">
 
 </head>
