--- a/dashboard/template/test.html
+++ b/dashboard/template/test.html
@@ -1,146 +1,145 @@
+<!DOCTYPE html>
+<html>
 <head>
-  <title>Ipython Dashboard</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="../static/js/jquery-2.1.4.js"></script>
-  <script src="http://kendo.cdn.telerik.com/2014.1.318/js/kendo.all.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="http://kendo.cdn.telerik.com/2014.1.318/styles/kendo.common.min.css
+    <meta charset="utf-8">
+    <link href="../build/nv.d3.css" rel="stylesheet" type="text/css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.2/d3.min.js" charset="utf-8"></script>
+    <script src="../build/nv.d3.js"></script>
 
-">
-</head>
-
-
-<body>
-    <div>
-        <button id="groupByTest">Group by Test</button>
-        <button id="groupByStudent">Group by Student</button>
-        <button id="sortByCategory">Sort by Category</button>
-        <button id="sortByScore">Sort by Score</button>
-    </div>
-    <div id="chart"/>
-    <div id="chartTable"/>
-
-
-<script type="text/javascript">
-    var jsonData = [
-    {"Student":"student 1","Test":"test A","Value":29,"CustomOrder":3},
-    {"Student":"student 1","Test":"test B","Value":58,"CustomOrder":3},
-    {"Student":"student 2","Test":"test A","Value":33,"CustomOrder":4},
-    {"Student":"student 2","Test":"test B","Value":41,"CustomOrder":4},
-    {"Student":"student 3","Test":"test A","Value":29,"CustomOrder":2},
-    {"Student":"student 3","Test":"test B","Value":62,"CustomOrder":2},
-    {"Student":"student 4","Test":"test A","Value":62,"CustomOrder":1},
-    {"Student":"student 4","Test":"test B","Value":72,"CustomOrder":1},
-    {"Student":"student 5","Test":"test A","Value":33,"CustomOrder":5},
-    {"Student":"student 5","Test":"test B","Value":25,"CustomOrder":5}
-];
-
-var myDataSource = new kendo.data.DataSource({
-    data: jsonData,
-    group: [{ "field": "Student"}],
-    sort: [
-        { "field": "Test", "dir": "asc" },
-        { "field": "CustomOrder", "dir": "asc" }
-    ],
-    schema: {
-        model: {
-            fields: {
-                Student: {
-                    "type": "string"
-                },
-                Test: {
-                    "type": "string"
-                },
-                Value: {
-                    "type": "number"
-                },
-                CustomOrder: {
-                    "type": "number"
-                }
-            }
+    <style>
+        text {
+            font: 12px sans-serif;
         }
-    }
-});
-var group = "Student";
-var category = "Test";
-var sort = "Student";
+        svg {
+            display: block;
+        }
+        html, body, #chart1, svg {
+            margin: 0px;
+            padding: 0px;
+            height: 100%;
+            width: 100%;
+        }
 
-function updateChart(){
-    var chart = $("#chart").data("kendoChart");
-    chart.options.title = "group by " + group + ", sort by " + sort;    
-    chart.options.categoryAxis.field = category;    
-}
+        .dashed {
+            stroke-dasharray: 5,5;
+        }
+    </style>
+</head>
+<body class='with-3d-shadow with-transitions'>
+<div style="position:absolute; top: 0; left: 0;">
+    <button onclick="randomizeFillOpacity();">Randomize fill opacity</button>
+    <button onclick="expandLegend();">Expand/Contract Legend</button>
+    <script>
+        var expandLegend = function() {
+            var exp = chart.legend.expanded();
+            chart.legend.expanded(!exp);
+            chart.update();
+        }
+    </script>
+</div>
+<div id="chart1"></div>
 
-function groupByTest_click() {    
-    group = "Test";
-    category = "Student";
-    updateChart();
-    $('#chart').data('kendoChart').dataSource.group([{ field: group }]);
-    $('#chart').data('kendoChart').dataSource.sort([{ field: sort, dir: "desc" }]);    
-}
+<script>
+    // Wrapping in nv.addGraph allows for '0 timeout render', stores rendered charts in nv.graphs, and may do more in the future... it's NOT required
+    var chart;
+    var data;
 
-function groupByStudent_click() {
-    group = "Student";
-    category = "Test";
-    updateChart();
-    $('#chart').data('kendoChart').dataSource.group([{ field: group }]);
-    $('#chart').data('kendoChart').dataSource.sort([{ field: sort, dir: "desc" }]);    
-}
+    var randomizeFillOpacity = function() {
+        var rand = Math.random(0,1);
+        for (var i = 0; i < 100; i++) { // modify sine amplitude
+            data[4].values[i].y = Math.sin(i/(5 + rand)) * .4 * rand - .25;
+        }
+        data[4].fillOpacity = rand;
+        chart.update();
+    };
 
-function sortByCategory_click() {
-    sort = group;
-    updateChart();
-    $('#chart').data('kendoChart').dataSource.group([{ field: group }]);
-    $('#chart').data('kendoChart').dataSource.sort([{ field: sort, dir: "desc" }]);    
-}
+    nv.addGraph(function() {
+        chart = nv.models.lineChart()
+            .options({
+                transitionDuration: 300,
+                useInteractiveGuideline: true
+            })
+        ;
 
-function sortByScore_click() {
-    sort = "CustomOrder";
-    updateChart();
-    $('#chart').data('kendoChart').dataSource.group([{ field: group }]);
-    $('#chart').data('kendoChart').dataSource.sort([{ field: sort, dir: "desc" }]);     
-}
+        // chart sub-models (ie. xAxis, yAxis, etc) when accessed directly, return themselves, not the parent chart, so need to chain separately
+        chart.xAxis
+            .axisLabel("Time (s)")
+            .tickFormat(d3.format(',.1f'))
+            .staggerLabels(true)
+        ;
 
-function setupChart() {
-    $("#chart").kendoChart({
-        dataSource: myDataSource,
-        series: [{ 
-            type: "column",                         
-            field: "Value"
-        }],
-        "categoryAxis": [{
-            "labels": {
-                "template": "#: value #",
-                "rotation": 0
-            },
-            "majorGridLines": {
-                "visible": false
-            },
-            name: "myCat",
-            field: "Test"
-        }],
-        "valueAxis": [{
-            "labels": {
-                "format": "{0:N0}"
-            },
-            "line": {
-                "visible": false
-            },
-            "max": 100,
-            "majorUnit": 10
-        }],                
-        "autoBind": true
+        chart.yAxis
+            .axisLabel('Voltage (v)')
+            .tickFormat(function(d) {
+                if (d == null) {
+                    return 'N/A';
+                }
+                return d3.format(',.2f')(d);
+            })
+        ;
+
+        data = sinAndCos();
+
+        d3.select('#chart1').append('svg')
+            .datum(data)
+            .call(chart);
+
+        nv.utils.windowResize(chart.update);
+
+        return chart;
     });
-};
 
-$(document).ready(function() {    
-    $("#groupByTest").on("click", groupByTest_click);
-    $("#groupByStudent").on("click", groupByStudent_click);
-    $("#sortByCategory").on("click", sortByCategory_click);
-    $("#sortByScore").on("click", sortByScore_click);
-    
-    setupChart();    
-});
+    function sinAndCos() {
+        var sin = [],
+            sin2 = [],
+            cos = [],
+            rand = [],
+            rand2 = []
+            ;
+
+        for (var i = 0; i < 100; i++) {
+            sin.push({x: i, y: i % 10 == 5 ? null : Math.sin(i/10) }); //the nulls are to show how defined works
+            sin2.push({x: i, y: Math.sin(i/5) * 0.4 - 0.25});
+            cos.push({x: i, y: .5 * Math.cos(i/10)});
+            rand.push({x:i, y: Math.random() / 10});
+            rand2.push({x: i, y: Math.cos(i/10) + Math.random() / 10 })
+        }
+
+        return [
+            {
+                area: true,
+                values: sin,
+                key: "Sine Wave",
+                color: "#ff7f0e",
+                strokeWidth: 4,
+                classed: 'dashed'
+            },
+            {
+                values: cos,
+                key: "Cosine Wave",
+                color: "#2ca02c"
+            },
+            {
+                values: rand,
+                key: "Random Points",
+                color: "#2222ff"
+            },
+            {
+                values: rand2,
+                key: "Random Cosine",
+                color: "#667711",
+                strokeWidth: 3.5
+            },
+            {
+                area: true,
+                values: sin2,
+                key: "Fill opacity",
+                color: "#EF9CFB",
+                fillOpacity: .1
+            }
+        ];
+    }
 
 </script>
 </body>
+</html>
